tests/invalid/variables/no_semicolon.rs
/*
fail: 1
*/

main(): int {
    a: int = 2
    a = a + 4;
    return a;
}